--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=backend
-spring.datasource.url=jdbc:mariadb://localhost:3306/catering_db
-spring.datasource.username=root
-spring.datasource.password=Lucifer98!
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.sql.init.mode = never
-
+    spring.application.name=backend
+    spring.datasource.url=jdbc:mariadb://localhost:3306/catering_db
+    spring.datasource.username=root
+    spring.datasource.password=Lucifer98!
+    spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+    spring.sql.init.mode = never
+    spring.jpa.show-sql= true
