--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@
     spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
     spring.sql.init.mode = never
     spring.jpa.show-sql= true
+    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
