--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
     spring.application.name=backend
-    spring.datasource.url=jdbc:mariadb://localhost:3306/catering_db
+    spring.datasource.url=jdbc:mariadb://localhost:3306/catering_db_final
     spring.datasource.username=root
     spring.datasource.password=Lucifer98!
     spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
